log-and-ping/manifests/log-output/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: log-and-ping-pv
          persistentVolumeClaim:
            claimName: log-and-ping-claim
      containers:
        - name: log-output-generator
          image: autorejecttop/log-output-generator:1.11
          imagePullPolicy: Always
          volumeMounts:
            - name: log-and-ping-pv
              mountPath: /usr/src/app/files
        - name: log-output-reader
          image: autorejecttop/log-output-reader:2.1
          imagePullPolicy: Always
          volumeMounts:
            - name: log-and-ping-pv
              mountPath: /usr/src/app/files
