log-and-ping/manifests/log-output/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
